--- a/React/tictactoe/src/styles.css
+++ b/React/tictactoe/src/styles.css
@@ -1,5 +1,10 @@
+:root {
+  background-color: #0b1018;
+}
+
 * {
   box-sizing: border-box;
+  color: #354152
 }
 
 body {
@@ -52,23 +57,22 @@ ul {
 
 body {
   font-family: sans-serif;
-  margin: 20px;
+  margin: 4em;
   padding: 0;
 }
 
 .square {
-  background: #fff;
-  border: 1px solid #999;
+  background: #95bbcc;
+  border: 1px solid #294080;
   float: left;
-  font-size: 24px;
+  font-size: 42px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  height: 64px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 64px;
 }
 
 .board-row:after {
